/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://oss.sonatype.org/content/repositories/snapshots'
    }

    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
}

dependencies {
    compile 'org.apache.commons:commons-lang3:3.5'
    compile 'org.yaml:snakeyaml:1.23'
    compile 'com.github.mifmif:generex:1.0.2'
    testCompile 'org.slf4j:slf4j-api:1.7.25'
    testCompile 'org.slf4j:slf4j-simple:1.7.25'
    testCompile 'junit:junit:4.12'
    testCompile 'org.hamcrest:hamcrest-library:1.3'
    testCompile 'org.reflections:reflections:0.9.11'
    testCompile 'org.mockito:mockito-core:2.23.4'
    testCompile 'commons-validator:commons-validator:1.6'
}

group = 'com.github.javafaker'
version = '1.0.2-SNAPSHOT'
description = 'Java Faker'
sourceCompatibility = '1.8'

configurations.all {
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
